--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: cloning repo
-        run: git clone https://github.com/yasirdev111/mygitactions.git
+      #- name: cloning repo
+        #run: git clone https://github.com/yasirdev111/mygitactions.git
       - name: Echo Hostname
         run: hostname
       - name: current dir
