--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -20,3 +20,5 @@ jobs:
         run: |
           cat /etc/os-release
           ip a s
+          echo "running hostname.sh file"
+          ./hostname.sh
