--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -20,5 +20,7 @@ jobs:
         run: |
           cat /etc/os-release
           ip a s
+          pwd
+          ls -l
           echo "running hostname.sh file"
           ./hostname.sh
