--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -22,5 +22,6 @@ jobs:
           ip a s
           pwd
           ls -l
+          cd mygitactions
           echo "running hostname.sh file"
           ./hostname.sh
