--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -24,4 +24,5 @@ jobs:
           ls -l
           cd mygitactions
           echo "running hostname.sh file"
+          chmod +x hostname.sh
           ./hostname.sh
