--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -25,4 +25,4 @@ jobs:
           echo "running hostname.sh file"
           chmod +x hostname.sh
           ./hostname.sh
-          cd /ansibletask/playbooks/
+          cd ansibletask/playbooks/
