--- a/.github/workflows/task2.yml
+++ b/.github/workflows/task2.yml
@@ -16,3 +16,4 @@ jobs:
       - name: Run Ansible Playbook
         run: |
           ansible-playbook  nginx.yml
+          ansible-playbook add-user.yml
