--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -18,8 +18,10 @@ jobs:
         run: hostname
       - name: current dir
         run: pwd
-      - name: Os details
+      - name: Cloning ansible roles
         run: |
+          git clone https://github.com/Grokon/ansible-role-adduser.git
+          git clone https://github.com/bytepark/ansible-cronjob.git
           pwd
           ls -l
           echo "running hostname.sh file"
