--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -18,8 +18,18 @@ jobs:
         run: hostname
       - name: current dir
         run: pwd
-      - name: Cloning ansible roles
+      - name: changine directory
         run: |
+          # Navigate to the working directory
+          cd /home/yasir/actions-runner/_work/mygitactions/mygitactions
+          # Create the 'roles' directory if it doesn't exist
+          mkdir -p roles
+          cd roles
+
+          # Clone the required roles
+          git clone https://github.com/Grokon/ansible-role-adduser.git ansible-role-adduser
+          git clone https://github.com/bytepark/ansible-cronjob.git ansible-cronjob
+
           pwd
           ls -l
           echo "running hostname.sh file"
