--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -30,8 +30,8 @@ jobs:
           git clone https://github.com/Grokon/ansible-role-adduser.git ansible-role-adduser
           git clone https://github.com/bytepark/ansible-cronjob.git ansible-cronjob
 
-          pwd
-          ls -l
-          echo "running hostname.sh file"
-          chmod +x hostname.sh
-          ./hostname.sh
+        #pwd
+        #ls -l
+        # echo "running hostname.sh file"
+        # chmod +x hostname.sh
+        # ./hostname.sh
