--- a/.github/workflows/task3-ansible-role.yml
+++ b/.github/workflows/task3-ansible-role.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Run Ansible Playbook
         run: |
-          ansible-playbook playbook.yml
+          ansible-playbook add-user.yml
