--- a/.github/workflows/task3-ansible-role.yml
+++ b/.github/workflows/task3-ansible-role.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Ansible
         run: |
