--- a/nginx.yml
+++ b/nginx.yml
@@ -7,6 +7,10 @@
     apt:
      name: nginx
      state: present
+  - name: copy index.html
+    template:
+         src: /home/yasir/ansibletask/playbooks/index.html
+         dest: /var/www/html/index.html
 
   - name: starting nginx
     service:
