--- a/nginx.yml
+++ b/nginx.yml
@@ -9,7 +9,7 @@
      state: present
   - name: copy index.html
     template:
-         src: /home/yasir/ansibletask/playbooks/index.html
+         src: index.html
          dest: /var/www/html/index.html
 
   - name: starting nginx
