--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -10,25 +10,25 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout Code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.7  # Use the latest version
+          terraform_version: 1.5.7
 
       - name: Initialize Terraform
         run: terraform init
-        working-directory: ./terraform
+        working-directory: ~/actions-runner/_work/mygitactions/mygitactions
 
       - name: Plan Terraform
         run: terraform plan
-        working-directory: ./terraform
+        working-directory: ~/actions-runner/_work/mygitactions/mygitactions
 
       - name: Apply Terraform
         run: terraform apply -auto-approve
-        working-directory: ./terraform
+        working-directory: ~/actions-runner/_work/mygitactions/mygitactions
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
